--- a/WeddingApp/WeddingApp/Views/InvoiceWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/InvoiceWindow.xaml
@@ -57,6 +57,7 @@
                                 <ColumnDefinition Width="1*" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Background="Transparent">
+                                
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên chú rễ: " FontSize="15" Margin="5" />
                                     <TextBlock x:Name="txtGroom" FontSize="15" Margin="5" FontWeight="DemiBold" />
@@ -68,6 +69,10 @@
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Đãi tiệc:" FontSize="15" Margin="5" />
                                     <TextBlock x:Name ="txtWeddingDate" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Mã tiệc cưới: " FontSize="15" Margin="5" />
+                                    <TextBlock x:Name="txtWeddingID" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Column="1">
