--- a/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
@@ -515,7 +515,8 @@
                                 Margin="20 0 0 0" />
                                 <TextBlock
                                 Text="{Binding TotalPrice, StringFormat=N0, UpdateSourceTrigger=PropertyChanged}"
-                                Foreground="Black"
+                                x:Name="txtTotalprice"
+                                    Foreground="Black"
                                 FontWeight="Medium"
                                 FontSize="16"
                                 Width="110"
