--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/DashBoardUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/DashBoardUC.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              DataContext="{StaticResource dashBoardVM}"
+             x:Name="dashBoardWD"
              mc:Ignorable="d"
              Height="710"
              Width="1120">
@@ -106,9 +107,10 @@
                             Height="40"
                             Margin="0 20 0 0"
                             FontSize="20"
-                            Foreground="White"
-                            Command="{Binding SaveInfoCommand}"
-                            CommandParameter="{Binding ElementName=changeInfoWD}" />
+                            Foreground="White" 
+                            Command="{Binding btnExportCommand}"
+                            CommandParameter="{Binding ElementName=dashBoardWD}"/>
+                           
                     <Grid Margin="0 10 0 0">
                         <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
                             <Rectangle.Effect>
