--- a/WeddingApp/WeddingApp/Views/UserControls/InvoiceListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/InvoiceListUC.xaml
@@ -96,9 +96,9 @@
                         Foreground="Black"
                         Grid.Column="6"
                         TextWrapping="Wrap"
-                        TextAlignment="Center" />
+                        TextAlignment="Center" 
+                        />
         </Grid>
-        Margin="100 10 100 80"
         <!--SOURCE CỦA LISTVIEW NÀY LÀ 1 LIST RECEIPT-->
         <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" ScrollViewer.CanContentScroll="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="invoiceList" ItemsSource="{Binding ListInvoice}">
             <ListView.ItemTemplate>
