--- a/WeddingApp/WeddingApp/Views/MainWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/MainWindow.xaml
@@ -259,6 +259,35 @@
                                 Margin="20 10"
                                 FontSize="15" FontWeight="Bold"
                             Visibility="Collapsed"
+                                x:Name="RoleListUC">
+                                <ListViewItem.Template>
+                                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                        <Border Height="50" x:Name="border" CornerRadius="10" BorderBrush="Transparent" BorderThickness="1">
+                                            <StackPanel Orientation="Horizontal">
+                                                <materialDesign:PackIcon Name="icon" Margin="30 0 0 0" Height="30" Width="30" Kind="PeopleGroupOutline" VerticalAlignment="Center" ></materialDesign:PackIcon>
+                                                <TextBlock x:Name="text" Text="Quản lí Chức vụ" Margin="20 16 0 0" ></TextBlock>
+                                            </StackPanel>
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="text" Property="TextBlock.Foreground" Value="{DynamicResource Orange2}"></Setter>
+                                                <Setter TargetName="icon" Property="TextBlock.Foreground" Value="{DynamicResource Orange2}"></Setter>
+                                                <Setter Property="Cursor" Value="Hand"></Setter>
+                                            </Trigger>
+                                            <Trigger Property="IsSelected" Value="True">
+                                                <Setter TargetName="text" Property="TextBlock.Foreground" Value="{DynamicResource Orange2}"></Setter>
+                                                <Setter TargetName="icon" Property="TextBlock.Foreground" Value="{DynamicResource Orange2}"></Setter>
+                                                <Setter TargetName="border" Property="BorderBrush" Value="{StaticResource Orange2}"></Setter>
+                                                <Setter Property="Cursor" Value="Hand"></Setter>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </ListViewItem.Template>
+                            </ListViewItem>
+                            <ListViewItem
+                                Margin="20 10"
+                                FontSize="15" FontWeight="Bold"
+                            Visibility="Collapsed"
                                 x:Name="ServiceListUC">
                                 <ListViewItem.Template>
                                     <ControlTemplate TargetType="{x:Type ListViewItem}">
