add UI chart, change dashboard

--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/DashBoardUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/DashBoardUC.xaml
@@ -91,114 +91,9 @@
                     </ListViewItem>
                 </ListView>
             </Grid>
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"></ColumnDefinition>
-                    <ColumnDefinition Width="3*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <StackPanel>
-                    <Button
-                                x:Name="saveBtn"
-                            TabIndex="5"
-                            IsDefault="True"
-                            Style="{StaticResource GreenBtn}"
-                            Content="Xuất hoá đơn "
-                            Width="200"
-                            Height="40"
-                            Margin="0 20 0 0"
-                            FontSize="20"
-                            Foreground="White" 
-                            Command="{Binding btnExportCommand}"
-                            CommandParameter="{Binding ElementName=dashBoardWD}"/>
-                           
-                    <Grid Margin="0 10 0 0">
-                        <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
-                            <Rectangle.Effect>
-                                <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
-                            </Rectangle.Effect>
-                        </Rectangle>
-                        <Grid Margin="25">
-                            <Border CornerRadius="0 0 10 10" Background="{StaticResource Orange1}"
-                            Width="40" Height="50"
-                            HorizontalAlignment="Left" VerticalAlignment="Top"
-                            Margin="15 0">
-                                <materialDesign:PackIcon Kind="Money"
-                                                 HorizontalAlignment="Center" VerticalAlignment="Bottom"
-                                                 Margin="5"
-                                                 Foreground="White"
-                                                 Width="25" Height="25" />
-                            </Border>
-                            <TextBlock Text="Doanh thu" FontWeight="Bold" HorizontalAlignment="Right" Margin="15" FontSize="24" VerticalAlignment="Top" />
-                            <TextBlock Text="{Binding TotalValue, StringFormat=N0}"
-                               TextWrapping="Wrap"
-                               HorizontalAlignment="Right" VerticalAlignment="Bottom"
-                               Margin="10 10 5 15" FontSize="30" />
-                        </Grid>
-                    </Grid>
-                    <Grid Margin="0 10">
-                        <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
-                            <Rectangle.Effect>
-                                <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
-                            </Rectangle.Effect>
-                        </Rectangle>
-                        <Grid Margin="25">
-                            <Border CornerRadius="0 0 10 10" Background="Gold" Width="40" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15 0">
-
-                                <materialDesign:PackIcon Kind="Cart" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="25" Height="25" />
-                            </Border>
-                            <TextBlock Text="Số đơn hàng" FontWeight="Bold" HorizontalAlignment="Right" Margin="15" FontSize="24" VerticalAlignment="Top" />
-
-                            <TextBlock Text="{Binding TotalReceipt, StringFormat=N0}"
-                               HorizontalAlignment="Right" VerticalAlignment="Bottom"
-                               Margin="20 10" FontSize="40" />
-                        </Grid>
-                    </Grid>
-
-                    <Grid Margin="0 10">
-                        <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
-                            <Rectangle.Effect>
-                                <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
-                            </Rectangle.Effect>
-                        </Rectangle>
-                        <Grid Margin="25">
-                            <Border CornerRadius="0 0 10 10"
-                            Background="LawnGreen" Width="40" Height="50"
-                            HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15 0">
-                                <materialDesign:PackIcon Kind="Person"
-                                                 HorizontalAlignment="Center" VerticalAlignment="Bottom"
-                                                 Margin="5" Foreground="White"
-                                                 Width="25" Height="25" />
-                            </Border>
-                            <TextBlock Text="Số khách hàng" FontWeight="Bold" HorizontalAlignment="Right" Margin="15 15 5 15" FontSize="24" VerticalAlignment="Top" />
-
-                            <TextBlock Text="{Binding TotalCustomer, StringFormat=N0}"
-                               HorizontalAlignment="Right" VerticalAlignment="Bottom"
-                               Margin="10" FontSize="40" />
-                        </Grid>
-                    </Grid>
-                </StackPanel>
-                <Grid Grid.Column="1">
-                    <lvc:CartesianChart Series="{Binding SeriesCollection}"
-                                        LegendLocation="Right"
-                                        Margin="30">
-                        <lvc:CartesianChart.AxisX>
-                            <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
-                        </lvc:CartesianChart.AxisX>
-                        <lvc:CartesianChart.AxisY>
-                            <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding Formatter}"></lvc:Axis>
-                        </lvc:CartesianChart.AxisY>
-                    </lvc:CartesianChart>
-                    <Rectangle
-                Fill="White"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch"
-                RadiusY="10"
-                RadiusX="10"
-                Panel.ZIndex="-2"
-                Effect="{StaticResource dropShadow}"
-                Margin="10">
-                    </Rectangle>
-                </Grid>
+            <Grid
+                x:Name="selectGrid"
+                Grid.Row="1">
             </Grid>
         </Grid>
     </materialDesign:TransitioningContent>
